libtracker-data: Guard against invalid statements in public API

https://bugzilla.gnome.org/show_bug.cgi?id=738450